スマホ等の小さい画面にも対応するようにasidを実装

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </p>
             </section>
 
-            <section id="simulation">
+            <section id="simulation-area">
                 <h2>2. シミュレーション</h2>
                 <p>
                     以下は、実際にアルゴリズムが動作するシミュレーションです。
@@ -174,7 +174,8 @@ if (targetPoint) {
                 </p>
 
             </section>
-            <section id="simulation">
+            
+            <section id="appendix">
                 <h2>4. おまけ</h2>
                 <p>
                     全方向に移動できるオムニホイールなのに、なぜわざわざ向きを変えるのでしょうか。<br>
@@ -190,8 +191,9 @@ if (targetPoint) {
                 <h3>目次</h3>
                 <ul>
                     <li><a href="#overview">1. 概要</a></li>
-                    <li><a href="#simulation">2. シミュレーション</a></li>
+                    <li><a href="#simulation-area">2. シミュレーション</a></li>
                     <li><a href="#code-explanation">3. 具体的な処理の解説</a></li>
+                    <li><a href="#appendix">4. おまけ</a></li>
                 </ul>
             </div>
         </aside>
