製作時間追記

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@ const robot = new OmniRobot(100, 100, 0);</code></pre>
                 </p>
                 <p>
                     このようにJavaScriptは、Webページの制作だけでなく、<strong>科学技術計算や教育用のインタラクティブなシミュレータ開発</strong>においても、非常に強力なツールとなり得る。
+                    <br>
+                    <br>
+                    製作時間：約9時間
                 </p>
             </section>
         </main>
